--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "express": "^4.16.3",
     "fs": "0.0.1-security",
     "node-fetch": "^2.1.2",
+    "react-native-rsa": "0.0.3",
     "request": "^2.87.0"
   },
   "devDependencies": {
